classDiagram

class Room{
    -long id
    -String description
    -int capacity
}

class Session{
    -long id
    -DateTime datetime
    -int finalCapacity
    -int predictedCapacity
    -Score score
    -Room room
    -LinkedList participants

    -registerParticipant(Participante part)
}

class RegisterCard{
    -long id
}
class Person{

    -String nome
    -String cpf
}
class Participant{
    -long id
    -string Cpf
    - Card createCard()
}

class Speaker{
    -long id
    - Card createCard()
}

class Registry{
    -long id
    -Participant participant
    -Session session
    -Feedback feedback
}

class Event{
    -long id
    -String name
    -Date date
}

class Feedback{
    -long id
    -int finalCapacity
    -double rating
}

%% Heranças

Speaker --|> Person
Participant --|> Person

Registry "0.*" --o "1.1" Participant
Registry "1.*" --o "1.1" Session
Registry "1.1" *-- "0.1" RegisterCard

Session "1.1" *-- "1.*" Speaker
Room "1.1" --* "0.1" Session
Session "1.*" --* "1.1" Event

Feedback "1.1" --* "1.1" Registry